# mmmc

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  mmmc.cpp  mmmc.h  mmmc.kdev4
src/: CMakeLists.txt  library.cpp  library.h  main.cpp  mainwidget.cpp  mainwidget.h  mmmc.cpp  mmmc.h  music_model.cpp  music_model.h  song.cpp  song.h
src/config/: CMakeLists.txt  filelineedit.cpp  filelineedit.h  iconfig.cpp  iconfig.h  settingsdialog.cpp  settingsdialog.h
